--- a/api/findMe/package.json
+++ b/api/findMe/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "",
   "dependencies": {
-    "body-parser": "*",
+    "body-parser": "^1.19.0",
     "express": "*",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.2"
