--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+
 }
